fix remove btn spacing

--- a/css/forms.css
+++ b/css/forms.css
@@ -66,7 +66,7 @@ hr{
 	height:40px;
 }
 .dyn-btn{
-	margin-top:30px;
+	margin-top:35px;
 }
 .dyn-btn a{
 	margin-left:-15px;font-size:20px;padding-right:0;
